speedtest-tracker/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 8.8.8.8
        searches:
          - speedtest-tracker.svc.cluster.local
        options:
          - name: ndots
            value: "5"
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:1.4.1
          ports:
            - name: http
              containerPort: 80
