speedtest-tracker/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: speedtest-tracker
